Details
-
Type:
Bug
-
Status: Closed
-
Priority:
P2: Important
-
Resolution: Done
-
Affects Version/s: 6.2
-
Fix Version/s: 6.2.1, 6.3.0 Alpha
-
Component/s: Core: Containers and Algorithms, Documentation
-
Labels:None
-
Story Points:3
-
Sprint:Team 1 Foundation_Sprint 44
Description
After adding constraints for comparison and debug/data stream operators for Qt containers, the return types of these operators look unnecessarily complicated, see for example: https://doc.qt.io/qt-6/qmap.html#operator-eq-eq. Fix the docs to show the actual return types.