Fix docs for comparison/debug/data stream operators of Qt containers

Because of the constraints on comparison, debug and data stream
operators, the return types for them look weird in docs. Conditionally
use the actual return types, in case if Q_CLANG_QDOC is defined.

Also add the docs of debug stream operators for types for which they
were misssing.

Task-number: QTBUG-97247
Change-Id: I57f2c52bd3af805c7eeebb602c47de1e95ee09bd
Reviewed-by: Lars Knoll <lars.knoll@qt.io>
(cherry picked from commit 8a8bf1b84e9a096993b892873eb62c735149f320)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>