src/corelib/tools/qmap.h
@@ -276,6 +276,7 @@ public:
         return {};
     }
 
+#ifndef Q_CLANG_QDOC
     template <typename AKey = Key, typename AT = T> friend
     QTypeTraits::compare_eq_result_container<QMap, AKey, AT> operator==(const QMap &lhs, const QMap &rhs)
     {
@@ -293,6 +294,10 @@ public:
         return !(lhs == rhs);
     }
     // TODO: add the other comparison operators; std::map has them.
+#else
+    friend bool operator==(const QMap &lhs, const QMap &rhs);
+    friend bool operator!=(const QMap &lhs, const QMap &rhs);
+#endif // Q_CLANG_QDOC
 
     size_type size() const { return d ? size_type(d->m.size()) : size_type(0); }
 
@@ -904,6 +909,7 @@ public:
         return {};
     }
 
+#ifndef Q_CLANG_QDOC
     template <typename AKey = Key, typename AT = T> friend
     QTypeTraits::compare_eq_result_container<QMultiMap, AKey, AT> operator==(const QMultiMap &lhs, const QMultiMap &rhs)
     {
@@ -921,6 +927,10 @@ public:
         return !(lhs == rhs);
     }
     // TODO: add the other comparison operators; std::multimap has them.
+#else
+    friend bool operator==(const QMultiMap &lhs, const QMultiMap &rhs);
+    friend bool operator!=(const QMultiMap &lhs, const QMultiMap &rhs);
+#endif // Q_CLANG_QDOC
 
     size_type size() const { return d ? size_type(d->m.size()) : size_type(0); }
 
